--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@mintlify/cli": "latest",
+    "babel-loader": "^9.2.1",
     "next": "latest",
+    "next-mdx-remote": "^5.0.0",
     "react": "latest",
     "react-dom": "latest"
   },
