--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "mintlify-docs",
   "version": "1.0.0",
+  "description": "Mintlify Documentation Site",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "mintlify dev"
   },
+  "keywords": ["documentation", "mintlify"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "mintlify": "latest",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
   }
